1. Save card hash; 2. Reorder Strange Eons folders

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At the moment, all the scripts work with only one card set.  Set the correct UUID below:"
+    "At the moment, all the scripts work with only one card set at a time.  Set the correct UUID below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,10 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import hashlib\n",
     "import os\n",
     "import re\n",
     "import requests\n",
@@ -44,7 +45,7 @@
     "\n",
     "CONFIGURATION_PATH = 'configuration.yaml'\n",
     "IMAGES_PATH = os.path.join(PROJECT_FOLDER, 'imagesRaw')\n",
-    "IMAGES_ZIP_PATH = '{}/Decks/new/'.format(os.path.split(PROJECT_FOLDER)[-1])\n",
+    "IMAGES_ZIP_PATH = '{}/Export/'.format(os.path.split(PROJECT_FOLDER)[-1])\n",
     "MACROS_PATH = 'macros.xlsm'\n",
     "MACROS_COPY_PATH = 'macros_copy.xlsm'\n",
     "OCTGN_ZIP_PATH = 'imagesOCTGN/a21af4e8-be4b-4cda-a6b6-534f9717391f/Sets'\n",
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,9 +155,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Frogmorton\\\\XML\\\\setEons.xml'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Find properties with a given name\n",
     "def find_properties(parent, name):\n",
@@ -214,6 +226,10 @@
     "                        os.path.join(IMAGES_PATH, filename))\n",
     "        prop = get_property(card, 'Artwork')\n",
     "        prop.set('value', filename)\n",
+    "        prop = get_property(card, 'Artwork Size')\n",
+    "        prop.set('value', str(os.path.getsize(os.path.join(conf['artwork_path'], filename))))\n",
+    "        prop = get_property(card, 'Artwork Modified')\n",
+    "        prop.set('value', str(int(os.path.getmtime(os.path.join(conf['artwork_path'], filename)))))\n",
     "\n",
     "        artist = find_properties(card, 'Artist')\n",
     "        if not artist and '_Artist_' in filename:\n",
@@ -230,6 +246,10 @@
     "                        os.path.join(IMAGES_PATH, filename))\n",
     "        prop = get_property(alternate, 'Artwork')\n",
     "        prop.set('value', filename)\n",
+    "        prop = get_property(alternate, 'Artwork Size')\n",
+    "        prop.set('value', str(os.path.getsize(os.path.join(conf['artwork_path'], filename))))\n",
+    "        prop = get_property(alternate, 'Artwork Modified')\n",
+    "        prop.set('value', str(int(os.path.getmtime(os.path.join(conf['artwork_path'], filename)))))\n",
     "\n",
     "        artist = find_properties(alternate, 'Artist')\n",
     "        if not artist and '_Artist_' in filename:\n",
@@ -243,6 +263,9 @@
     "        prop = get_property(card, 'Encounter Set Total')\n",
     "        prop.set('value', str(encounter_sets[encounter_cards[card.attrib['id']]]))\n",
     "\n",
+    "    card_hash = hashlib.md5(re.sub('\\n\\s*', '', ET.tostring(card, encoding='unicode').strip()).encode()).hexdigest()\n",
+    "    card.set('hash', card_hash)\n",
+    "        \n",
     "tree.write(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml'))\n",
     "\n",
     "# Copy setEons.xml into the project\n",
@@ -252,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,10 +291,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Strange Eons Part:\n",
+    "### Manual Strange Eons Part:\n",
     "\n",
     "1. Open `setGenerator.seproject` generated above.\n",
-    "2. Run `Script/makeCards` script by double clicking it.  This will take the templates, fill them with values from `setEons.xml` and export results in all required formats into `Decks/new` folder inside Strange Eons.\n",
+    "2. Run `Script/makeCards` script by double clicking it.  This will take the templates, fill them with values from `setEons.xml` and export results in all the required formats.\n",
     "3. Once completed, close Strange Eons."
    ]
   },
@@ -284,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,8 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Now there should be an imagePack_<octgnid>.o8c file.\n",
-    "# Open that using the \"Add Image Packs\" button from within OCTGN to add it."
+    "Now there should be an imagePack_<octgnid>.o8c file.  Open that using the \"Add Image Packs\" button from within OCTGN to add it."
    ]
   },
   {
