Track changes since the previous script run to touch only updated cards

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At the moment, all the scripts work with only one card set at a time.  Set the correct UUID below:"
+    "At the moment, the script works with only one card set at a time.  Set the card set UUID:"
    ]
   },
   {
@@ -21,12 +21,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Set whether you want to generate all cards from scratch (`True`) or to update only the cards, changed since the previous script run (`False`):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FROM_SCRATCH = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Run the cells below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,26 +97,39 @@
     "else:\n",
     "    url = 'https://docs.google.com/spreadsheets/d/{}/export?format=xlsx'.format(conf['sheet_gdid'])\n",
     "\n",
-    "myfile = requests.get(url)\n",
     "with open(sheet_path, 'wb') as f_sheet:\n",
-    "    f_sheet.write(myfile.content)"
+    "    f_sheet.write(requests.get(url).content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Copy Excel Sheet over to sheet that contains the macros, and run the macros\n",
-    "# This will create two .xml files. One in the setEons folder called setEons.xml, which contains the card data\n",
-    "# needed by Strange Eons.\n",
-    "# The second will be placed in the setOCTGN folder, which will be copied over to your OCTGN folder later\n",
-    "# in this workbook.\n",
+    "# Backup the previous setEons.xml\n",
+    "if os.path.exists(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml')):\n",
+    "    _ = shutil.move(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml'),\n",
+    "                    os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml.old'))\n",
+    "\n",
+    "if FROM_SCRATCH and os.path.exists(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml.old')):\n",
+    "    os.remove(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml.old'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Copy Excel Sheet over to sheet that contains the macros, and run the macros.\n",
+    "# This will create two .xml files. One in the setEons folder called setEons.xml,\n",
+    "# which contains the card data needed by Strange Eons.\n",
+    "# The second will be placed in the setOCTGN folder, which will be copied over to your OCTGN folder later.\n",
     "\n",
     "CARD_DATA_RANGE = 'A2:AU1001'\n",
     "\n",
-    "shutil.copyfile(MACROS_PATH, MACROS_COPY_PATH)\n",
+    "_ = shutil.copyfile(MACROS_PATH, MACROS_COPY_PATH)\n",
     "\n",
     "app = xw.App(visible=False)  # if you want Excel to run in background\n",
     "xlws = {}\n",
@@ -135,7 +164,7 @@
     "                Key2=xlws['ws2b'].range('CardNumber').api,\n",
     "                Order2=xw.constants.SortOrder.xlAscending)\n",
     "\n",
-    "            # This macro will generate a folder under setOCTGN, which which will be copied over\n",
+    "            # This macro will generate a folder under setOCTGN, which will be copied over\n",
     "            # to OCTGN\\GameDatabase\\a21af4e8-be4b-4cda-a6b6-534f9717391f\\Sets \n",
     "            macro1 = xlwb2.macro('SaveOCTGN')\n",
     "            macro1()\n",
@@ -155,20 +184,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Frogmorton\\\\XML\\\\setEons.xml'"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Find properties with a given name\n",
     "def find_properties(parent, name):\n",
@@ -203,7 +221,7 @@
     "\n",
     "    break\n",
     "\n",
-    "# Copy artwork images into the project and update setEons.xml with filenames, artists and encounter set numbers\n",
+    "# Update setEons.xml with artwork, artists and encounter set numbers\n",
     "tree = ET.parse(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml'))\n",
     "root = tree.getroot()\n",
     "encounter_sets = {}\n",
@@ -222,8 +240,6 @@
     "\n",
     "    filename = images.get('{}_{}'.format(card.attrib['id'], 'A'))\n",
     "    if filename:\n",
-    "        shutil.copyfile(os.path.join(conf['artwork_path'], filename),\n",
-    "                        os.path.join(IMAGES_PATH, filename))\n",
     "        prop = get_property(card, 'Artwork')\n",
     "        prop.set('value', filename)\n",
     "        prop = get_property(card, 'Artwork Size')\n",
@@ -242,8 +258,6 @@
     "    alternate = [a for a in card if a.attrib.get('type') == 'B']\n",
     "    if filename and alternate:\n",
     "        alternate = alternate[0]\n",
-    "        shutil.copyfile(os.path.join(conf['artwork_path'], filename),\n",
-    "                        os.path.join(IMAGES_PATH, filename))\n",
     "        prop = get_property(alternate, 'Artwork')\n",
     "        prop.set('value', filename)\n",
     "        prop = get_property(alternate, 'Artwork Size')\n",
@@ -258,6 +272,7 @@
     "            prop = get_property(alternate, 'Artist')\n",
     "            prop.set('value', artist_value)\n",
     "\n",
+    "# Update setEons.xml with encounter set total and card hash\n",
     "for card in root[0]:\n",
     "    if card.attrib['id'] in encounter_cards:\n",
     "        prop = get_property(card, 'Encounter Set Total')\n",
@@ -265,17 +280,46 @@
     "\n",
     "    card_hash = hashlib.md5(re.sub('\\n\\s*', '', ET.tostring(card, encoding='unicode').strip()).encode()).hexdigest()\n",
     "    card.set('hash', card_hash)\n",
-    "        \n",
+    "\n",
+    "# Mark cards, which were not changed since the previous script run\n",
+    "old_hashes = {}\n",
+    "skip_ids = set()\n",
+    "if os.path.exists(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml.old')):\n",
+    "    tree_old = ET.parse(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml.old'))\n",
+    "    root_old = tree_old.getroot()\n",
+    "    for card in root_old[0]:\n",
+    "        old_hashes[card.attrib['id']] = card.attrib['hash']\n",
+    "\n",
+    "for card in root[0]:\n",
+    "    if old_hashes.get(card.attrib['id']) == card.attrib['hash']:\n",
+    "        skip_ids.add(card.attrib['id'])\n",
+    "        card.set('skip', '1')\n",
+    "    else:\n",
+    "        filename = find_properties(card, 'Artwork')\n",
+    "        if filename:\n",
+    "            filename = filename[0].attrib['value']\n",
+    "            _ = shutil.copyfile(os.path.join(conf['artwork_path'], filename),\n",
+    "                                os.path.join(IMAGES_PATH, filename))\n",
+    "\n",
+    "        alternate = [a for a in card if a.attrib.get('type') == 'B']\n",
+    "        if alternate:\n",
+    "            alternate = alternate[0]\n",
+    "            filename = find_properties(alternate, 'Artwork')\n",
+    "            if filename:\n",
+    "                filename = filename[0].attrib['value']\n",
+    "                _ = shutil.copyfile(os.path.join(conf['artwork_path'], filename),\n",
+    "                                    os.path.join(IMAGES_PATH, filename))\n",
+    "\n",
     "tree.write(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml'))\n",
     "\n",
     "# Copy setEons.xml into the project\n",
-    "shutil.copyfile(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml'),\n",
-    "                os.path.join(XML_PATH, 'setEons.xml'))"
+    "_ = shutil.copyfile(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml'),\n",
+    "                    os.path.join(XML_PATH, 'setEons.xml'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +363,9 @@
     "for _, _, filenames in os.walk(os.path.join(OUTPUT_EONS_PATH, SET_UUID)):\n",
     "    for filename in filenames:\n",
     "        if filename.split('.')[-1] in ('jpg', 'png'):\n",
-    "            os.remove(os.path.join(OUTPUT_EONS_PATH, SET_UUID, filename))\n",
+    "            card_id = filename[50:86]\n",
+    "            if card_id not in skip_ids:\n",
+    "                os.remove(os.path.join(OUTPUT_EONS_PATH, SET_UUID, filename))\n",
     "\n",
     "    break\n",
     "\n",
@@ -338,25 +384,22 @@
     "                with zip_obj.open(filename) as zip_file:\n",
     "                    with open(os.path.join(OUTPUT_EONS_PATH, SET_UUID,\n",
     "                              output_filename), 'wb') as output_file:\n",
-    "                        shutil.copyfileobj(zip_file, output_file)\n",
+    "                        _ = shutil.copyfileobj(zip_file, output_file)\n",
     "        else:\n",
     "            with zip_obj.open(filename) as zip_file:\n",
     "                with open(os.path.join(OUTPUT_EONS_PATH, SET_UUID,\n",
     "                          output_filename), 'wb') as output_file:\n",
-    "                    shutil.copyfileobj(zip_file, output_file)"
+    "                    _ = shutil.copyfileobj(zip_file, output_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# OCTGN Set ID obtained by looking at the folders generated by the excel SaveOCTGN script\n",
-    "octgnid = next(os.walk(SET_OCTGN_PATH))[1][0]\n",
-    "\n",
     "# Make an image pack\n",
-    "pack_path = os.path.join(OUTPUT_OCTGN_PATH, 'imagePack_{}.o8c'.format(octgnid))\n",
+    "pack_path = os.path.join(OUTPUT_OCTGN_PATH, 'imagePack_{}.o8c'.format(SET_UUID))\n",
     "known_filenames = set()\n",
     "with zipfile.ZipFile(pack_path, 'w', zipfile.ZIP_DEFLATED) as zip_obj:\n",
     "    for _, _, filenames in os.walk(os.path.join(OUTPUT_EONS_PATH, SET_UUID)):\n",
@@ -373,7 +416,7 @@
     "\n",
     "            if filename not in known_filenames:\n",
     "                known_filenames.add(filename)\n",
-    "                newfile = '{}/{}/Cards/{}'.format(OCTGN_ZIP_PATH, octgnid, filename)\n",
+    "                newfile = '{}/{}/Cards/{}'.format(OCTGN_ZIP_PATH, SET_UUID, filename)\n",
     "                zip_obj.write(oldfile, newfile)\n",
     "\n",
     "        break"
@@ -401,8 +444,8 @@
     "#setspath = dirOCTGN+'\\\\GameDatabase\\\\a21af4e8-be4b-4cda-a6b6-534f9717391f\\\\Sets\\\\'\n",
     "\n",
     "#if os.path.isdir(dirOCTGN):\n",
-    "#    if os.path.isdir('.\\\\setOCTGN\\\\'+octgnid):\n",
-    "#        copy_tree('.\\\\setOCTGN\\\\'+octgnid, setspath+octgnid)\n",
+    "#    if os.path.isdir('.\\\\setOCTGN\\\\'+SET_UUID):\n",
+    "#        copy_tree('.\\\\setOCTGN\\\\'+SET_UUID, setspath+SET_UUID)\n",
     "#        print('Copied successfully.')\n",
     "#    else:\n",
     "#        print('No folder found to move.')\n",
