Change OCTGN output folder

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,11 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "FROM_SCRATCH = True"
+    "FROM_SCRATCH = False"
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,17 +65,16 @@
     "MACROS_PATH = 'macros.xlsm'\n",
     "MACROS_COPY_PATH = 'macros_copy.xlsm'\n",
     "OCTGN_ZIP_PATH = 'imagesOCTGN/a21af4e8-be4b-4cda-a6b6-534f9717391f/Sets'\n",
-    "OUTPUT_EONS_PATH = 'imagesEons'\n",
-    "OUTPUT_OCTGN_PATH = ''\n",
+    "OUTPUT_IMAGES_PATH = 'imagesEons'\n",
+    "OUTPUT_OCTGN_PATH = os.path.join('Output', 'OCTGN')\n",
     "PROJECT_PATH = 'setGenerator.seproject'\n",
     "SET_EONS_PATH = 'setEons'\n",
-    "SET_OCTGN_PATH = 'setOCTGN'\n",
     "XML_PATH = os.path.join(PROJECT_FOLDER, 'XML')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,14 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Copy Excel Sheet over to sheet that contains the macros, and run the macros.\n",
     "# This will create two .xml files. One in the setEons folder called setEons.xml,\n",
     "# which contains the card data needed by Strange Eons.\n",
-    "# The second will be placed in the setOCTGN folder, which will be copied over to your OCTGN folder later.\n",
+    "# The second will be placed in the Output/OCTGN folder, which will be copied over to your OCTGN folder later.\n",
     "\n",
     "CARD_DATA_RANGE = 'A2:AU1001'\n",
     "\n",
@@ -164,8 +163,8 @@
     "                Key2=xlws['ws2b'].range('CardNumber').api,\n",
     "                Order2=xw.constants.SortOrder.xlAscending)\n",
     "\n",
-    "            # This macro will generate a folder under setOCTGN, which will be copied over\n",
-    "            # to OCTGN\\GameDatabase\\a21af4e8-be4b-4cda-a6b6-534f9717391f\\Sets \n",
+    "            # This macro will generate a folder under Output/OCTGN, which will be copied over\n",
+    "            # to OCTGN/GameDatabase/a21af4e8-be4b-4cda-a6b6-534f9717391f/Sets \n",
     "            macro1 = xlwb2.macro('SaveOCTGN')\n",
     "            macro1()\n",
     "\n",
@@ -184,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +280,7 @@
     "    card_hash = hashlib.md5(re.sub('\\n\\s*', '', ET.tostring(card, encoding='unicode').strip()).encode()).hexdigest()\n",
     "    card.set('hash', card_hash)\n",
     "\n",
-    "# Mark cards, which were not changed since the previous script run\n",
+    "# Mark cards, which were not changed since the previous script run and copy artwork images into the project\n",
     "old_hashes = {}\n",
     "skip_ids = set()\n",
     "if os.path.exists(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml.old')):\n",
@@ -319,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,21 +350,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create an image folder if it doesn't exist yet\n",
-    "if not os.path.exists(os.path.join(OUTPUT_EONS_PATH, SET_UUID)):\n",
-    "    os.mkdir(os.path.join(OUTPUT_EONS_PATH, SET_UUID))\n",
+    "if not os.path.exists(os.path.join(OUTPUT_IMAGES_PATH, SET_UUID)):\n",
+    "    os.mkdir(os.path.join(OUTPUT_IMAGES_PATH, SET_UUID))\n",
     "\n",
     "# Delete old image files\n",
-    "for _, _, filenames in os.walk(os.path.join(OUTPUT_EONS_PATH, SET_UUID)):\n",
+    "for _, _, filenames in os.walk(os.path.join(OUTPUT_IMAGES_PATH, SET_UUID)):\n",
     "    for filename in filenames:\n",
     "        if filename.split('.')[-1] in ('jpg', 'png'):\n",
     "            card_id = filename[50:86]\n",
     "            if card_id not in skip_ids:\n",
-    "                os.remove(os.path.join(OUTPUT_EONS_PATH, SET_UUID, filename))\n",
+    "                os.remove(os.path.join(OUTPUT_IMAGES_PATH, SET_UUID, filename))\n",
     "\n",
     "    break\n",
     "\n",
@@ -382,32 +381,36 @@
     "                parts[1] = str(i)\n",
     "                output_filename = '-'.join(parts)\n",
     "                with zip_obj.open(filename) as zip_file:\n",
-    "                    with open(os.path.join(OUTPUT_EONS_PATH, SET_UUID,\n",
+    "                    with open(os.path.join(OUTPUT_IMAGES_PATH, SET_UUID,\n",
     "                              output_filename), 'wb') as output_file:\n",
     "                        _ = shutil.copyfileobj(zip_file, output_file)\n",
     "        else:\n",
     "            with zip_obj.open(filename) as zip_file:\n",
-    "                with open(os.path.join(OUTPUT_EONS_PATH, SET_UUID,\n",
+    "                with open(os.path.join(OUTPUT_IMAGES_PATH, SET_UUID,\n",
     "                          output_filename), 'wb') as output_file:\n",
     "                    _ = shutil.copyfileobj(zip_file, output_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create an OCTGN folder if it doesn't exist yet\n",
+    "if not os.path.exists(os.path.join(OUTPUT_OCTGN_PATH, SET_UUID)):\n",
+    "    os.mkdir(os.path.join(OUTPUT_OCTGN_PATH, SET_UUID))\n",
+    "\n",
     "# Make an image pack\n",
-    "pack_path = os.path.join(OUTPUT_OCTGN_PATH, 'imagePack_{}.o8c'.format(SET_UUID))\n",
+    "pack_path = os.path.join(OUTPUT_OCTGN_PATH, SET_UUID, 'imagePack_{}.o8c'.format(SET_UUID))\n",
     "known_filenames = set()\n",
     "with zipfile.ZipFile(pack_path, 'w', zipfile.ZIP_DEFLATED) as zip_obj:\n",
-    "    for _, _, filenames in os.walk(os.path.join(OUTPUT_EONS_PATH, SET_UUID)):\n",
+    "    for _, _, filenames in os.walk(os.path.join(OUTPUT_IMAGES_PATH, SET_UUID)):\n",
     "        for filename in filenames:\n",
     "            if filename.split('.')[-1] not in ('jpg', 'png'):\n",
     "                continue\n",
     "\n",
-    "            oldfile = os.path.join(OUTPUT_EONS_PATH, SET_UUID, filename)\n",
+    "            oldfile = os.path.join(OUTPUT_IMAGES_PATH, SET_UUID, filename)\n",
     "            parts = filename.split('.')\n",
     "            parts[0] = re.sub('-1$', '', re.sub('-2$', '.B', parts[0]))\n",
     "            filename = '.'.join(parts)\n",
@@ -426,7 +429,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now there should be an imagePack_<octgnid>.o8c file.  Open that using the \"Add Image Packs\" button from within OCTGN to add it."
+    "Now there should be `set.xml` and `imagePack_&lt;octgnid&gt;.o8c` files in `Output\\OCTGN\\&lt;octgnid&gt;` folder.  Open the `imagePack` file using the \"Add Image Packs\" button from within OCTGN to add it."
    ]
   },
   {
@@ -438,17 +441,18 @@
     "# Copy set folder to OCTGN directory\n",
     "#from distutils.dir_util import copy_tree\n",
     "\n",
-    "#dirOCTGN = os.path.expanduser('~')+'\\\\Documents\\\\OCTGN\\\\'\n",
-    "#if not os.path.isdir(dirOCTGN): print('Invalid path!')\n",
+    "#dirOCTGN = os.path.expanduser('~') + '\\\\Documents\\\\OCTGN\\\\'\n",
+    "#if not os.path.isdir(dirOCTGN):\n",
+    "#    print('Invalid path!')\n",
     "\n",
-    "#setspath = dirOCTGN+'\\\\GameDatabase\\\\a21af4e8-be4b-4cda-a6b6-534f9717391f\\\\Sets\\\\'\n",
+    "#setspath = dirOCTGN + '\\\\GameDatabase\\\\a21af4e8-be4b-4cda-a6b6-534f9717391f\\\\Sets\\\\'\n",
     "\n",
     "#if os.path.isdir(dirOCTGN):\n",
-    "#    if os.path.isdir('.\\\\setOCTGN\\\\'+SET_UUID):\n",
-    "#        copy_tree('.\\\\setOCTGN\\\\'+SET_UUID, setspath+SET_UUID)\n",
+    "#    if os.path.isdir(os.path.join(OUTPUT_OCTGN_PATH, SET_UUID)):\n",
+    "#        copy_tree(os.path.join(OUTPUT_OCTGN_PATH, SET_UUID), os.path.join(setspath, SET_UUID))\n",
     "#        print('Copied successfully.')\n",
     "#    else:\n",
-    "#        print('No folder found to move.')\n",
+    "#        print('No folder found to copy.')\n",
     "#else:\n",
     "#    print('OCTGN Sets folder not found.')"
    ]
