--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -429,7 +429,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now there should be `set.xml` and `imagePack_&lt;octgnid&gt;.o8c` files in `Output\\OCTGN\\&lt;octgnid&gt;` folder.  Open the `imagePack` file using the \"Add Image Packs\" button from within OCTGN to add it."
+    "Now there should be `set.xml` and `imagePack_<octgnid>.o8c` files in `Output\\OCTGN\\<octgnid>` folder.  Open the `imagePack` file using the \"Add Image Packs\" button from within OCTGN to add it."
    ]
   },
   {
