Next portion of changes

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -9,12 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SET_UUID = '8a3273ca-1ccd-4e07-913b-766fcc49fe6f'\n",
-    "#SET_UUID = '17b90ca1-7e3e-4891-99da-954a7833e88e'"
+    "#SET_UUID = '8a3273ca-1ccd-4e07-913b-766fcc49fe6f'\n",
+    "SET_UUID = '17b90ca1-7e3e-4891-99da-954a7833e88e'"
    ]
   },
   {
@@ -26,11 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "FROM_SCRATCH = False"
+    "FROM_SCRATCH = True"
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +65,7 @@
     "MACROS_PATH = 'macros.xlsm'\n",
     "MACROS_COPY_PATH = 'macros_copy.xlsm'\n",
     "OCTGN_ZIP_PATH = 'imagesOCTGN/a21af4e8-be4b-4cda-a6b6-534f9717391f/Sets'\n",
+    "OUTPUT_DB_PATH = os.path.join('Output', 'DB')\n",
     "OUTPUT_IMAGES_PATH = 'imagesEons'\n",
     "OUTPUT_OCTGN_PATH = os.path.join('Output', 'OCTGN')\n",
     "PROJECT_PATH = 'setGenerator.seproject'\n",
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Backup the previous setEons.xml\n",
     "if os.path.exists(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml')):\n",
     "    _ = shutil.move(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml'),\n",
-    "                    os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml.old'))\n",
+    "                os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml.old'))\n",
     "\n",
     "if FROM_SCRATCH and os.path.exists(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml.old')):\n",
     "    os.remove(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml.old'))"
@@ -117,18 +118,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Copy Excel Sheet over to sheet that contains the macros, and run the macros.\n",
     "# This will create two .xml files. One in the setEons folder called setEons.xml,\n",
     "# which contains the card data needed by Strange Eons.\n",
-    "# The second will be placed in the Output/OCTGN folder, which will be copied over to your OCTGN folder later.\n",
+    "# The second will be placed in the Output/OCTGN folder, which should be copied over to your OCTGN folder.\n",
     "\n",
     "CARD_DATA_RANGE = 'A2:AU1001'\n",
     "\n",
     "_ = shutil.copyfile(MACROS_PATH, MACROS_COPY_PATH)\n",
+    "\n",
+    "set_name = None\n",
     "\n",
     "app = xw.App(visible=False)  # if you want Excel to run in background\n",
     "xlws = {}\n",
@@ -142,6 +145,7 @@
     "    for row in range(3, 102):\n",
     "        if xlws['ws1a'].range((row, 1)).value == SET_UUID:\n",
     "            set_row = row\n",
+    "            set_name = xlws['ws1a'].range((row, 2)).value\n",
     "            break\n",
     "\n",
     "    if set_row:\n",
@@ -163,7 +167,7 @@
     "                Key2=xlws['ws2b'].range('CardNumber').api,\n",
     "                Order2=xw.constants.SortOrder.xlAscending)\n",
     "\n",
-    "            # This macro will generate a folder under Output/OCTGN, which will be copied over\n",
+    "            # This macro will generate a folder under Output/OCTGN, which should be copied over\n",
     "            # to OCTGN/GameDatabase/a21af4e8-be4b-4cda-a6b6-534f9717391f/Sets \n",
     "            macro1 = xlwb2.macro('SaveOCTGN')\n",
     "            macro1()\n",
@@ -183,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,8 +330,7 @@
     "with zipfile.ZipFile(PROJECT_PATH, 'w') as zip_obj:\n",
     "    for root, _, filenames in os.walk(PROJECT_FOLDER):\n",
     "        for filename in filenames:\n",
-    "            if filename != '.gitignore':\n",
-    "                zip_obj.write(os.path.join(root, filename))"
+    "            zip_obj.write(os.path.join(root, filename))"
    ]
   },
   {
@@ -350,50 +353,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create an image folder if it doesn't exist yet\n",
-    "if not os.path.exists(os.path.join(OUTPUT_IMAGES_PATH, SET_UUID)):\n",
-    "    os.mkdir(os.path.join(OUTPUT_IMAGES_PATH, SET_UUID))\n",
+    "for folder in ('jpg300NoBleed', 'png300Bleed', 'png300NoBleed', 'png800Bleed'):\n",
+    "    # Create image folders if they don't exist yet\n",
+    "    if not os.path.exists(os.path.join(OUTPUT_IMAGES_PATH, folder, SET_UUID)):\n",
+    "        os.mkdir(os.path.join(OUTPUT_IMAGES_PATH, folder, SET_UUID))\n",
     "\n",
-    "# Delete old image files\n",
-    "for _, _, filenames in os.walk(os.path.join(OUTPUT_IMAGES_PATH, SET_UUID)):\n",
-    "    for filename in filenames:\n",
-    "        if filename.split('.')[-1] in ('jpg', 'png'):\n",
-    "            card_id = filename[50:86]\n",
-    "            if card_id not in skip_ids:\n",
-    "                os.remove(os.path.join(OUTPUT_IMAGES_PATH, SET_UUID, filename))\n",
+    "    # Delete old image files\n",
+    "    for _, _, filenames in os.walk(os.path.join(OUTPUT_IMAGES_PATH, folder, SET_UUID)):\n",
+    "        for filename in filenames:\n",
+    "            if filename.split('.')[-1] in ('jpg', 'png'):\n",
+    "                card_id = filename[50:86]\n",
+    "                if card_id not in skip_ids:\n",
+    "                    os.remove(os.path.join(OUTPUT_IMAGES_PATH, folder, SET_UUID, filename))\n",
     "\n",
-    "    break\n",
+    "        break\n",
     "\n",
-    "# Copy generated images from the project zip\n",
-    "with zipfile.ZipFile(PROJECT_PATH) as zip_obj:\n",
-    "    filelist = [f for f in zip_obj.namelist() if f.startswith(IMAGES_ZIP_PATH)\n",
-    "                and f.split('.')[-1] in ('jpg', 'png')]\n",
-    "    for filename in filelist:\n",
-    "        output_filename = os.path.split(filename)[-1]\n",
-    "        output_filename = re.sub('-2-1(?=\\.(?:jpg|png)$)', '-2', output_filename)\n",
-    "        parts = output_filename.split('-')\n",
-    "        if parts[1] == 'p':\n",
-    "            for i in range(1, 4):\n",
-    "                parts[1] = str(i)\n",
-    "                output_filename = '-'.join(parts)\n",
+    "    # Copy generated images from the project zip\n",
+    "    with zipfile.ZipFile(PROJECT_PATH) as zip_obj:\n",
+    "        filelist = [f for f in zip_obj.namelist()\n",
+    "                    if f.startswith('{}{}'.format(IMAGES_ZIP_PATH, folder))\n",
+    "                    and f.split('.')[-1] in ('jpg', 'png')]\n",
+    "        for filename in filelist:\n",
+    "            output_filename = os.path.split(filename)[-1]\n",
+    "            output_filename = re.sub('-2-1(?=\\.(?:jpg|png)$)', '-2', output_filename)\n",
+    "            parts = output_filename.split('-')\n",
+    "            if parts[1] == 'p':\n",
+    "                for i in range(1, 4):\n",
+    "                    parts[1] = str(i)\n",
+    "                    output_filename = '-'.join(parts)\n",
+    "                    with zip_obj.open(filename) as zip_file:\n",
+    "                        with open(os.path.join(OUTPUT_IMAGES_PATH, folder, SET_UUID,\n",
+    "                                  output_filename), 'wb') as output_file:\n",
+    "                            _ = shutil.copyfileobj(zip_file, output_file)\n",
+    "            else:\n",
     "                with zip_obj.open(filename) as zip_file:\n",
-    "                    with open(os.path.join(OUTPUT_IMAGES_PATH, SET_UUID,\n",
+    "                    with open(os.path.join(OUTPUT_IMAGES_PATH, folder, SET_UUID,\n",
     "                              output_filename), 'wb') as output_file:\n",
-    "                        _ = shutil.copyfileobj(zip_file, output_file)\n",
-    "        else:\n",
-    "            with zip_obj.open(filename) as zip_file:\n",
-    "                with open(os.path.join(OUTPUT_IMAGES_PATH, SET_UUID,\n",
-    "                          output_filename), 'wb') as output_file:\n",
-    "                    _ = shutil.copyfileobj(zip_file, output_file)"
+    "                        _ = shutil.copyfileobj(zip_file, output_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,26 +406,42 @@
     "if not os.path.exists(os.path.join(OUTPUT_OCTGN_PATH, SET_UUID)):\n",
     "    os.mkdir(os.path.join(OUTPUT_OCTGN_PATH, SET_UUID))\n",
     "\n",
-    "# Make an image pack\n",
+    "# Create a DB folder if it doesn't exist yet\n",
+    "if not os.path.exists(os.path.join(OUTPUT_DB_PATH, set_name)):\n",
+    "    os.mkdir(os.path.join(OUTPUT_DB_PATH, set_name))\n",
+    "\n",
+    "# Delete old image files in DB folder\n",
+    "for _, _, filenames in os.walk(os.path.join(OUTPUT_DB_PATH, set_name)):\n",
+    "    for filename in filenames:\n",
+    "        if filename.split('.')[-1] in ('jpg', 'png'):\n",
+    "            os.remove(os.path.join(OUTPUT_DB_PATH, set_name, filename))\n",
+    "\n",
+    "    break\n",
+    "\n",
+    "# Make an OCTGN image pack and copy to DB folder\n",
     "pack_path = os.path.join(OUTPUT_OCTGN_PATH, SET_UUID, 'imagePack_{}.o8c'.format(SET_UUID))\n",
     "known_filenames = set()\n",
     "with zipfile.ZipFile(pack_path, 'w', zipfile.ZIP_DEFLATED) as zip_obj:\n",
-    "    for _, _, filenames in os.walk(os.path.join(OUTPUT_IMAGES_PATH, SET_UUID)):\n",
+    "    for _, _, filenames in os.walk(os.path.join(OUTPUT_IMAGES_PATH, 'jpg300NoBleed', SET_UUID)):\n",
     "        for filename in filenames:\n",
     "            if filename.split('.')[-1] not in ('jpg', 'png'):\n",
     "                continue\n",
     "\n",
-    "            oldfile = os.path.join(OUTPUT_IMAGES_PATH, SET_UUID, filename)\n",
+    "            filepath = os.path.join(OUTPUT_IMAGES_PATH, 'jpg300NoBleed', SET_UUID, filename)\n",
     "            parts = filename.split('.')\n",
     "            parts[0] = re.sub('-1$', '', re.sub('-2$', '.B', parts[0]))\n",
-    "            filename = '.'.join(parts)\n",
-    "            if len(filename) > 50: \n",
-    "                filename = filename[50:]\n",
+    "            octgn_filename = '.'.join(parts)\n",
+    "            if len(octgn_filename) > 50: \n",
+    "                octgn_filename = octgn_filename[50:]\n",
     "\n",
-    "            if filename not in known_filenames:\n",
-    "                known_filenames.add(filename)\n",
-    "                newfile = '{}/{}/Cards/{}'.format(OCTGN_ZIP_PATH, SET_UUID, filename)\n",
-    "                zip_obj.write(oldfile, newfile)\n",
+    "            if octgn_filename not in known_filenames:\n",
+    "                known_filenames.add(octgn_filename)\n",
+    "                newfile = '{}/{}/Cards/{}'.format(OCTGN_ZIP_PATH, SET_UUID, octgn_filename)\n",
+    "                zip_obj.write(filepath, newfile)\n",
+    "                \n",
+    "            db_filename = '{}-{}{}{}'.format(filename[:3], re.sub('-+$', '',filename[8:50]),\n",
+    "                                           re.sub('-1$', '', filename[86:88]), filename[88:])\n",
+    "            _ = shutil.copyfile(filepath, os.path.join(OUTPUT_DB_PATH, set_name, db_filename))\n",
     "\n",
     "        break"
    ]
@@ -429,7 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now there should be `set.xml` and `imagePack_<octgnid>.o8c` files in `Output\\OCTGN\\<octgnid>` folder.  Open the `imagePack` file using the \"Add Image Packs\" button from within OCTGN to add it."
+    "Now there should be `set.xml` and `imagePack_<octgnid>.o8c` files in `Output/OCTGN/<octgnid>` folder.  Open the `imagePack` file using the \"Add Image Packs\" button from within OCTGN to add it."
    ]
   },
   {
