--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -9,12 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#SET_UUID = '8a3273ca-1ccd-4e07-913b-766fcc49fe6f'\n",
-    "SET_UUID = '17b90ca1-7e3e-4891-99da-954a7833e88e'"
+    "SET_UUID = '8a3273ca-1ccd-4e07-913b-766fcc49fe6f'\n",
+    "#SET_UUID = '17b90ca1-7e3e-4891-99da-954a7833e88e'"
    ]
   },
   {
@@ -26,11 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "FROM_SCRATCH = True"
+    "FROM_SCRATCH = False"
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
     "if not os.path.exists(os.path.join(OUTPUT_DB_PATH, set_name)):\n",
     "    os.mkdir(os.path.join(OUTPUT_DB_PATH, set_name))\n",
     "\n",
-    "# Delete old image files in DB folder\n",
+    "# Delete old image files in the DB folder\n",
     "for _, _, filenames in os.walk(os.path.join(OUTPUT_DB_PATH, set_name)):\n",
     "    for filename in filenames:\n",
     "        if filename.split('.')[-1] in ('jpg', 'png'):\n",
@@ -418,7 +418,7 @@
     "\n",
     "    break\n",
     "\n",
-    "# Make an OCTGN image pack and copy to DB folder\n",
+    "# Make an OCTGN image pack and copy files to the DB folder\n",
     "pack_path = os.path.join(OUTPUT_OCTGN_PATH, SET_UUID, 'imagePack_{}.o8c'.format(SET_UUID))\n",
     "known_filenames = set()\n",
     "with zipfile.ZipFile(pack_path, 'w', zipfile.ZIP_DEFLATED) as zip_obj:\n",
